--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
             "vite": "^6.4.1"
       },
       "scripts": {
+            "start": "vite preview --host 0.0.0.0 --port $PORT",
             "dev": "vite",
             "build": "vite build"
       }
